# conan-jscript

./: .gitignore  .travis.yml  FindJScript.cmake  README.md  add_const.patch  add_libatomic.patch  add_librt.patch  add_v8_options.patch  appveyor.yml  build.patch  build.py  conanfile.py  debugging_console_app.patch  dia.xmind  disable_gen_node_def.patch  disable_v8_slow_dcheck.patch  experimental.patch  export_v8_platform.patch  fix_deps_undici.patch  fix_gen_node_def.patch  fix_no_optimization_build.patch  fix_v8_windows_build.patch  fix_vcbuild.patch  fix_vs2022_build.patch  libuv_win7support.patch  oda.patch  prepare_for_debugging.bat  source.patch  use_cpp17.patch  use_nodepath_for_esm.patch  v8.patch
src/: common.gypi  configure  jscript-inl.h  jscript.h  node.gyp  vcbuild.bat
src/jscript-dll-test/: packages.config  (+5 more)
test_package/: CMakeLists.txt  TempJscriptInit.hpp  conanfile.py  get_cwd.h  n-api_addon.cpp  napi_addon.cpp  test_compile_failed.cpp  test_console_callback.cpp  test_esm_nodepath.mjs  test_external_init_script.cpp  test_fake.cpp  test_global_platform.cpp  test_headers.cpp  test_init_script.cpp  test_jscript.cpp  test_jscript_several_instance.cpp  test_log_callback.cpp  test_log_callback2.cpp  test_log_cb.cpp  test_multiple_instances.cpp  test_multiple_paths_node_modules.cpp  test_napi_addon.cpp  test_node.cpp  test_per_process_v8_platform.cpp  test_redirect_fprintf.cpp  test_redirect_fprintf2.cpp  test_throw_exception.cpp
test_project/: CMakeLists.txt  CMakeSettings.json  test_jscript.cpp  test_redirect_stderr.cpp
test_project/web/core/: odant.js
(+139 files in other folders)
